k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mentoraschool-landingpage-svc
spec:
  selector:
    app: mentoraschool-landingpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
