k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mentoraschool-landingpage-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Request a certificate from cert-manager (ClusterIssuer must exist)
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - mentoraschool.online
        - www.mentoraschool.online
      secretName: mentoraschool-online-tls
  rules:
    - host: mentoraschool.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mentoraschool-landingpage-svc
                port:
                  number: 80
    - host: www.mentoraschool.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mentoraschool-landingpage-svc
                port:
                  number: 80
